--- a/le_coin_libre/store/templates/store/user_profile.html
+++ b/le_coin_libre/store/templates/store/user_profile.html
@@ -17,40 +17,64 @@
     </div>
   </div>
     <!-- Produits de l'utilisateur -->
-    <div>
-      <CENTER><h3>Vos produits en vente </h3></CENTER>
-      {% if products %}
-          {% for product in products %}
-            <li>
-              <div class="bloc_produit">
-                <div class="photo_produit">
-                    <img src='../static/images/{{product.id}}/image1.jpg' style="width: 300px;">
-                </div>
-                <div class="description_produit">
-                    <a href='/produit/{{product.id}}'>
-                        <h1>{{product.title}}</h1>
-                        <a href="{% url 'delete_product' product.id %}" onclick="return ConfirmDelete()"><button>Supprimer</button></a>         
-                    </a>
-                    <h2 class="prix">{{product.price}} €</h2>
-                    <p class="description">{{product.description}}</p>
-                    <p class="date">{{product.date}}</p>
-                </div>
+  <div>
+    <CENTER><h3>Vos produits en vente </h3></CENTER>
+    {% if unreserved_products %}
+        {% for product in unreserved_products %}
+          <li>
+            <div class="bloc_produit">
+              <div class="photo_produit">
+                  <img src='../static/images/{{product.id}}/image1.jpg' style="width: 300px;">
+              </div>
+              <div class="description_produit">
+                  <a href='/produit/{{product.id}}'>
+                      <h1>{{product.title}}</h1>
+                      <a href="{% url 'delete_product' product.id %}" onclick="return ConfirmDelete()"><button>Supprimer</button></a>         
+                  </a>
+                  <h2 class="prix">{{product.price}} €</h2>
+                  <p class="description">{{product.description}}</p>
+                  <p class="date">{{product.date}}</p>
+              </div>
             </div>
-              <!-- Ajoutez d'autres détails du produit au besoin -->
-            </li>
-          {% endfor %}
-      {% else %}
-        <p>Vous n'avez actuellement aucun produit en vente.</p>
-      {% endif %}
-    </div>
-    
-  <script>
-    function ConfirmDelete() {
-        const confirmation = window.confirm("Êtes-vous sûr de vouloir supprimer ce produit ?");
-          
-        return confirmation; // Renvoie true si l'utilisateur clique sur "OK" et false sinon
-    }
-  </script>
+          </li>
+        {% endfor %}
+    {% else %}
+      <p>Vous n'avez actuellement aucun produit en vente.</p>
+    {% endif %}
+  </div>
+  <div>
+    <CENTER><h3>Vos produits réservés</h3></CENTER>
+    {% if reserved_products %}
+        {% for product in reserved_products %}
+          <li>
+            <div class="bloc_produit">
+              <div class="photo_produit">
+                  <img src='../static/images/{{product.id}}/image1.jpg' style="width: 300px;">
+              </div>
+              <div class="description_produit">
+                  <a href='/produit/{{product.id}}'>
+                      <h1>{{product.title}}</h1>
+                      <a href="{% url 'delete_product' product.id %}" onclick="return ConfirmDelete()"><button>Supprimer</button></a>         
+                  </a>
+                  <h2 class="prix">{{product.price}} €</h2>
+                  <p class="description">{{product.description}}</p>
+                  <p class="buyer">{{product.order_set.all.0.buyer.user.username}}</p>
+                  <p class="date">{{product.date}}</p>
+              </div>
+          </li>
+        {% endfor %}
+    {% else %}
+      <p>Vous n'avez actuellement aucun produit réservé.</p> 
+    {% endif %}
+  </div>      
+  
+<script>
+  function ConfirmDelete() {
+      const confirmation = window.confirm("Êtes-vous sûr de vouloir supprimer ce produit ?");
+        
+      return confirmation; // Renvoie true si l'utilisateur clique sur "OK" et false sinon
+  }
+</script>
 
 {% else %}
 
@@ -59,37 +83,34 @@
     <!-- Informations utilisateur -->
     <div>
       <h3>Informations utilisateur :</h3>
-      <p>Nom d'utilisateur : {{user.user.username }}</p>
-      <p>Email : {{user.user.email }}</p>
-      <!-- Ajoutez d'autres informations utilisateur au besoin -->
+      <p>Nom d'utilisateur : {{user.user.username}}</p>
+      <p>Email : {{user.user.email}}</p>
     </div>
   </div>
     <!-- Produits de l'utilisateur -->
-    <div>
-      <CENTER><h3>Produits en vente </h3></CENTER>
-      {% if products %}
-          {% for product in products %}
-            <li>
-              <div class="bloc_produit">
-                <div class="photo_produit">
-                    <img src='../static/images/{{product.id}}/image1.jpg' style="width: 300px;">
-                </div>
-                <div class="description_produit">
-                    <a href='/produit/{{product.id}}'>
-                        <h1>{{product.title}}</h1>         
-                    </a>
-                    <h2 class="prix">{{product.price}} €</h2>
-                    <p class="description">{{product.description}}</p>
-                    <p class="date">{{product.date}}</p>
-                </div>
+  <div>
+    <CENTER><h3>Produits en vente</h3></CENTER>
+    {% if unreserved_products %}
+      {% for product in unreserved_products %}
+        <li>
+          <div class="bloc_produit">
+            <div class="photo_produit">
+                <img src='../static/images/{{product.id}}/image1.jpg' style="width: 300px;">
             </div>
-              <!-- Ajoutez d'autres détails du produit au besoin -->
-            </li>
-          {% endfor %}
-      {% else %}
-        <p>Aucun produit en vente.</p>
-      {% endif %}
-    </div>
+            <div class="description_produit">
+                <a href='/produit/{{product.id}}'>
+                    <h1>{{product.title}}</h1>         
+                </a>
+                <h2 class="prix">{{product.price}} €</h2>
+                <p class="description">{{product.description}}</p>
+                <p class="date">{{product.date}}</p>
+            </div>
+        </li>
+      {% endfor %}
+    {% else %}
+      <p>Aucun produit en vente.</p>
+    {% endif %}
+  </div>
 
 {% endif %}
 
