--- a/le_coin_libre/store/templates/store/produit.html
+++ b/le_coin_libre/store/templates/store/produit.html
@@ -9,6 +9,7 @@
         <center>
             <button id="changeButtonMoins" onclick="changeImageMoins()">&larr;</button>
             <button id="changeButtonPlus" onclick="changeImagePlus()">&rarr;</button>
+            <button id="reserveButton" onclick="reserveProduct('{{Product.id}}')">Réserver le produit</button>
         </center>    
     </div>
     <div class="description_produit">
@@ -21,7 +22,30 @@
     </div>
 </div>
 
+<div id="productForm" style="display:none;">
+    <form id="productForm" action="{% url 'order_product' %}" method="post">
+        {% csrf_token %}
+        <!-- Champs du formulaire -->
+
+        <label for="productId">ID du Produit:</label>
+        <input type="text" id="productId" name="productId">
+
+        <!-- Bouton de soumission du formulaire -->
+        <input type="submit" value="Réserver le produit">
+    </form>
+</div>
+
 <script>
+    function reserveProduct(productId) {
+        // Mettre à jour les champs du formulaire avec les informations du produit
+        document.getElementById('productId').value = productId;
+
+        document.getElementById('productForm').style.display = 'block';
+
+        // Soumettre automatiquement le formulaire
+        document.getElementById('productForm').submit();
+    }
+
     let currentIndex = 1; // Indice initial de l'image
     const totalImages = {{Product.nb_image}}; // Nombre total d'images
 
