--- a/le_coin_libre/store/static/styles.css
+++ b/le_coin_libre/store/static/styles.css
@@ -177,7 +177,7 @@ footer{
 
 .photo_produit{
     height:20em;
-    justify-content:flex-start;
+    justify-content:center;
 }
 
 .description_produit{
@@ -204,6 +204,8 @@ footer{
     margin-bottom: 3em;
 }
 
+
+/*User profil*/
 .bloc_date_profil{
     display:flex;
     flex-direction: row;
@@ -214,6 +216,21 @@ footer{
     margin-top: auto; 
 }
 
+.bloc_profil{
+    display: grid;
+    grid-template-rows : 3fr 1fr;
+    height: fit-content;
+    margin : 2em 15em 2em 15em;
+    padding: 2em;
+    border-bottom: solid 0.2em rgb(141,22,22);
+    box-shadow: 4px 4px 10px rgba(0, 0, 0, 0.2);
+}
+
+.bouton_deconnexion{
+    display: flex;
+    flex-direction: row;
+    justify-content: flex-end;
+}
 /*Page à propos*/
 
 .section {
@@ -252,5 +269,21 @@ footer{
     margin-bottom: 10px;
 }
 
+/*Ajouter un produit*/
+
+.formulaire_ajout_produit{
+    display: grid;
+    grid-template-rows : 1fr 1fr 1fr 1fr 3fr;
+    height: fit-content;
+    margin : 2em 30em 2em 30em;
+    padding: 2em;
+    border-bottom: solid 0.2em rgb(141,22,22);
+    box-shadow: 4px 4px 10px rgba(0, 0, 0, 0.2);
+    justify-content: center;
+} 
 
 
+.titre_cellule{
+    margin-right:2em;
+    font-weight:bold;
+}
