--- a/le_coin_libre/store/templates/store/user_profile.html
+++ b/le_coin_libre/store/templates/store/user_profile.html
@@ -6,15 +6,14 @@
 {% if request.user.is_authenticated and request.user.username == email %}
 
   <CENTER><h2>Bienvenue sur votre page utilisateur, {{username}} !</h2></CENTER>
-  <div class="bloc_produit">
+  <div class="bloc_profil">
     <!-- Informations utilisateur -->
     <div>
       <h3>Informations utilisateur :</h3>
       <p>Prénom nom : {{username}}</p>
-      <p>Email : {{email}}</p>
-      <a href='/disconnect'><button class="rechercher">Se déconnecter</button></a>
-      
+      <p>Email : {{email}}</p> 
     </div>
+    <a class="bouton_deconnexion"href='/disconnect'><button class="rechercher">Se déconnecter</button></a>
   </div>
     <!-- Produits de l'utilisateur -->
     <div>
