--- a/le_coin_libre/store/templates/store/index.html
+++ b/le_coin_libre/store/templates/store/index.html
@@ -1,6 +1,9 @@
 {% load static %}
 {%include 'store/header.html' %}
 
+<div class="bouton_ajout_dynamique">
+    <a href = "../add_product">+</a>
+</div>
         <!-- construction d'une barre de recherche -->
 
         <form class="Recherche_form" id="search" action="{%url 'search' %}">
