--- a/le_coin_libre/store/templates/store/user_profile.html
+++ b/le_coin_libre/store/templates/store/user_profile.html
@@ -17,25 +17,31 @@
   </div>
     <!-- Produits de l'utilisateur -->
     <div>
-      <CENTER><h3>Vos produits en vente </h3></CENTER>
+      <CENTER><h2>Vos produits en vente </h2></CENTER>
       {% if products %}
-          {% for product in products %}
-            <li>
-              <div class="bloc_produit">
-                <div class="photo_produit">
-                    <img src='../static/images/{{product.id}}/image1.jpg' style="width: 300px;">
-                </div>
-                <div class="description_produit">
-                    <a href='/produit/{{product.id}}'>
-                        <h1>{{product.title}}</h1>
-                        <a href="{% url 'delete_product' product.id %}" onclick="return ConfirmDelete()"><button>Supprimer</button></a>         
-                    </a>
-                    <h2 class="prix">{{product.price}} €</h2>
-                    <p class="description">{{product.description}}</p>
-                    <p class="date">{{product.date}}</p>
-                </div>
+          {% for produit in products %}
+          <div class="bloc_produit">
+            <div class="photo_produit">
+                <img src='../static/images/{{produit.id}}/image1.jpg'>
             </div>
-          </li>
+            <div class="description_produit">
+                <a href='/produit/{{produit.id}}'>
+                    <h1>{{ produit.nom }}</h1>
+                </a>
+                <h2 class="prix">{{ produit.prix }} €</h2>
+                <div class="bloc_bas_produit_profil">
+                  <div class="bloc_date_profil">
+                    <p>Annonce publiée par</p>
+                    <a href= '/user_profile/?query={{produit.user_mail}}'><p class="user"> {{produit.user}} </p></a>
+                    <p class="date">le {{produit.date}}</p>
+                  </div>
+                  <a class="supprimer" href="{% url 'delete_product' produit.id %}" onclick="return ConfirmDelete()">Supprimer</a>         
+                    </a>
+                </div>
+                
+                
+            </div>
+        </div>
         {% endfor %}
     {% else %}
       <p>Vous n'avez actuellement aucun produit en vente.</p>
@@ -45,22 +51,28 @@
     <CENTER><h3>Vos produits réservés</h3></CENTER>
     {% if reserved_products %}
         {% for product in reserved_products %}
-          <li>
-            <div class="bloc_produit">
-              <div class="photo_produit">
-                  <img src='../static/images/{{product.id}}/image1.jpg' style="width: 300px;">
-              </div>
-              <div class="description_produit">
-                  <a href='/produit/{{product.id}}'>
-                      <h1>{{product.title}}</h1>
-                      <a href="{% url 'delete_product' product.id %}" onclick="return ConfirmDelete()"><button>Supprimer</button></a>         
-                  </a>
-                  <h2 class="prix">{{product.price}} €</h2>
-                  <p class="description">{{product.description}}</p>
-                  <p class="buyer">{{product.order_set.all.0.buyer.user.username}}</p>
-                  <p class="date">{{product.date}}</p>
-              </div>
-          </li>
+          <div class="bloc_produit">
+            <div class="photo_produit">
+                <img src='../static/images/{{produit.id}}/image1.jpg'>
+            </div>
+            <div class="description_produit">
+                <a href='/produit/{{produit.id}}'>
+                    <h1>{{ produit.nom }}</h1>
+                </a>
+                <h2 class="prix">{{ produit.prix }} €</h2>
+                <div class="bloc_bas_produit_profil">
+                  <div class="bloc_date_profil">
+                    <p>Annonce publiée par</p>
+                    <a href= '/user_profile/?query={{produit.user_mail}}'><p class="user"> {{produit.user}} </p></a>
+                    <p class="date">le {{produit.date}}</p>
+                  </div>
+                  <a class="supprimer" href="{% url 'delete_product' produit.id %}" onclick="return ConfirmDelete()">Supprimer</a>         
+                    </a>
+                </div>
+                
+                
+            </div>
+        </div>
         {% endfor %}
     {% else %}
       <p>Vous n'avez actuellement aucun produit réservé.</p> 
@@ -88,7 +100,7 @@
   </div>
     <!-- Produits de l'utilisateur -->
   <div>
-    <CENTER><h3>Produits en vente</h3></CENTER>
+    <CENTER><h2>Produits en vente</h2></CENTER>
     {% if unreserved_products %}
       {% for product in unreserved_products %}
         <li>
