on répare les fonctions cassées par Mathis

--- a/le_coin_libre/store/templates/store/produit.html
+++ b/le_coin_libre/store/templates/store/produit.html
@@ -16,7 +16,7 @@
         <div class="barre"></div>
         <h3 class="titre_description"></h3>Description </h3>
         <p class="description_seul"> {{ Product.description }} </p>
-        
+        <button id="reserveButton" onclick="reserveProduct('{{Product.id}}')">Réserver le produit</button>
     </div>
 </div>
 
