--- a/le_coin_libre/store/static/styles.css
+++ b/le_coin_libre/store/static/styles.css
@@ -25,7 +25,6 @@ header {
     height: fit-content;
     box-shadow: 4px 4px 10px rgba(0, 0, 0, 0.2);
     position: fixed;
-    width: 100%;
     top: 0;
     z-index: 1000;
 }
@@ -46,7 +45,7 @@ nav {
     flex-wrap: wrap;
     grid-template-columns: 1fr 1fr 1fr 1fr 1fr;
     align-items: center;
-    width: 100%;
+    width: 100%
 }
 
 .bouton_accueil a {
@@ -101,7 +100,6 @@ footer{
     color : white;
     text-align: center;
     bottom: 0;
-    width: 100%;
     flex: 1;
     padding: 5px;
     margin:0px;
