--- a/le_coin_libre/store/templates/store/recherche.html
+++ b/le_coin_libre/store/templates/store/recherche.html
@@ -25,14 +25,23 @@
         {% for produit in liste_produit %}
         <div class="bloc_produit">
             <div class="photo_produit">
-                <img src= '../static/images/{{produit.id}}/image1.jpg'>
+                <img src='../static/images/{{produit.id}}/image1.jpg'>
             </div>
-            <div class="détails_produit">
-                <a href='/produit/{{produit.id}}'><h1> {{ produit.nom }} </h1></a>
-                <h2 class="prix"> {{ produit.prix }} € </h2>
-                <a href= '/user_profile/?query={{produit.user}}'><h3 class="user">{{produit.user}}</h3></a>
-                <p class="description"> {{ produit.description }} </p>
-                <p class="date">{{produit.date}}</p>
+            <div class="description_produit">
+                <a href='/produit/{{produit.id}}'>
+                    <h1>{{ produit.nom }}</h1>
+                </a>
+                <h2 class="prix">{{ produit.prix }} €</h2>
+                <div class="bloc_date_profil">
+                    <p>Annonce publiée par</p>
+                    <a href= '/user_profile/?query={{produit.user}}'>
+                        <p class="user"> {{produit.user}} </p>
+                    </a>
+                    <p class="date">
+                        le {{produit.date}}
+                    </p>
+                </div>
+                
             </div>
         </div>
         {% endfor %}
