--- a/le_coin_libre/store/templates/store/a_propos.html
+++ b/le_coin_libre/store/templates/store/a_propos.html
@@ -1,9 +1,9 @@
 {%load static%}
 {%include 'store/header.html'%}
 
-<h1>A propos</h1>
+
     <div>
-        <div class="bloc_produit">
+        <div class="bloc_a_propos">
             <h2>Notre Histoire</h2>
             <p>Le Coin Libre est né d'un simple constat : l'incroyable potentiel de connexion et de partage au sein des campus universitaires. Imaginé par des étudiants, pour des étudiants, notre plateforme s'est épanouie à partir d'un besoin fondamental : faciliter les échanges entre pairs.</p>
             <br>
@@ -19,56 +19,40 @@
             </p>
         </div>
     
-        <div class="bloc_produit">
+        <div class="bloc_a_propos">
             <h2>Notre Équipe</h2>
                 <div class="team-member">
-                    <div>
-                        <img src="https://via.placeholder.com/150" alt="Membre 2">
-                        <p>Nom Prénom</p>
-                        <p>Poste</p>
+                    <div class="Nom">
+                        <img src="../static/images2/PX.jpg">
+                        <p> Mathis Benyahia </p>
                     </div>
-                    <div>
-                        <img src="https://via.placeholder.com/150" alt="Membre 2">
-                        <p>Nom Prénom</p>
-                        <p>Poste</p>
+                    <div class="Nom">
+                        <img src="../static/images2/T.jpg">
+                        <p> Adrian Demarcy</p>
                     </div>
-                    <div>
-                        <img src="https://via.placeholder.com/150" alt="Membre 2">
-                        <p>Nom Prénom</p>
-                        <p>Poste</p>
+                    <div class="Nom">
+                        <img src="../static/images2/BW.jpg">
+                        <p> Yoan Di Cosmo</p>
                     </div>
-                    <div>
-                        <img src="https://via.placeholder.com/150" alt="Membre 2">
-                        <p>Nom Prénom</p>
-                        <p>Poste</p>
+                    <div class="Nom">
+                        <img src="../static/images2/VV.jpeg">
+                        <p> Renaud Michelon</p>
                     </div>
-                    <div>
-                        <img src="https://via.placeholder.com/150" alt="Membre 2">
-                        <p>Nom Prénom</p>
-                        <p>Poste</p>
+                    <div class="Nom">
+                        <img src="../static/images2/IM.jpg">
+                        <p>Titouan Morvan</p>
                     </div>
-                    <div>
-                        <img src="https://via.placeholder.com/150" alt="Membre 2">
-                        <p>Nom Prénom</p>
-                        <p>Poste</p>
+                    <div class="Nom">
+                        <img src="../static/images2/H.jpg">
+                        <p>Younes Saad</p>
                     </div>
                 </div>
         </div>
     
-        <div class="bloc_produit">
-            <h2>Nos Produits/Services</h2>
-            <p>Listez et expliquez vos offres avec des photos illustrant vos propos.</p>
-        </div>
-    
-        <div class="bloc_produit">
-            <h2>Success Stories</h2>
-            <p>Mettez en avant des accomplissements ou des success stories qui impressionneront vos lecteurs.</p>
-        </div>
-    
-        <div class="bloc_produit">
-            <h2>Témoignages Clients</h2>
-            <p>Listez quelques citations ou témoignages de clients fidèles ou satisfaits de votre service.</p>
-        </div>
+        <div class="bloc_a_propos">
+            <h2>Contactez-nous </h2>
+            <p>Contactez-nous au : <strong>0781828385</strong> ou à <strong>lecoinlibre@gmail.com</strong></p>
+         </div>
     </div>
 
 {%include 'store/footer.html'%}
