--- a/le_coin_libre/store/templates/store/produit.html
+++ b/le_coin_libre/store/templates/store/produit.html
@@ -14,7 +14,7 @@
         <h2 class="prix_seul"> {{ Product.prix }} € </h2>
         <p class="date_seul">{{Product.date}}</p>
         <div class="barre"></div>
-        <h3 class="titre_description"></h3>Description </h3>
+        <h2 class="titre_description">Description </h2>
         <p class="description_seul"> {{ Product.description }} </p>
         
     </div>
