--- a/le_coin_libre/store/templates/store/add_produit.html
+++ b/le_coin_libre/store/templates/store/add_produit.html
@@ -2,8 +2,9 @@
 {%include 'store/header.html'%}
 
 {% block content %}
-  <h1>Ajouter un produit</h1>
-  <form class="formulaire_ajout_produit" method="post" class="post-form" enctype="multipart/form-data">
+  
+  <form class="formulaire_ajout_produit" method="post" enctype="multipart/form-data">
+    <h1>Ajouter un produit</h1>
     {% csrf_token %}
     <div class="titre_ajout">
       <label class="titre_cellule" for="{{ form.title.id_for_label }}">Titre:</label>
@@ -12,24 +13,30 @@
 
     <div class="description_ajout">
       <label class="titre_cellule" for="{{ form.description.id_for_label }}">Description:</label>
+      <br>
       {{ form.description }}
     </div>
 
     <div class="prix_ajout">
       <label class="titre_cellule" for="{{ form.price.id_for_label }}">Prix:</label>
+      
       {{ form.price }}
     </div>
 
     <div class="category_ajout">
       <label class="titre_cellule" for="{{ form.category.id_for_label }}">Catégorie:</label>
+      
       {{ form.category }}
     </div>
 
     <div class="photos_ajout">
       <label class="titre_cellule" for="{{ form.photos.id_for_label }}">Photos:</label>
+      <br>
       {{ form.photos }}
     </div>
+    <CENTER>
     <button class="rechercher" type="submit" class="btn btn-primary">Publier une annonce</button>
+    </CENTER>
   </form>
 {% endblock %}
 
