mise à jour CSS : page connexion, page inscription, page produit V2

--- a/le_coin_libre/store/static/styles.css
+++ b/le_coin_libre/store/static/styles.css
@@ -456,7 +456,8 @@ footer{
     cursor: pointer;
     border:none;
     height:fit-content;
-
 }
+
+/* ajouter les media query pour les écrans plus petits */
 
 
